CompiladoresUEPB/src/Analisador.jjt

options {
  JDK_VERSION = "1.5";
  STATIC = false;
 // DEBUG_PARSER = true;  //habilite para  acompanhar a analise
}

PARSER_BEGIN(Analisador) 
public class Analisador {
 	public static void main(String args[]) throws ParseException {
  }
}
PARSER_END(Analisador)

<WithinComment> SKIP :
{
  "*/" : DEFAULT
}

<WithinComment> MORE :
{
  <~[]>
}

SKIP :
{ 	" "
|	"\r"
|	"\t"
|	"\n"
|    "/*" : WithinComment
|   < SINGLE_LINE_COMMENT: "//" (~["\n","\r"])* ("\n"|"\r"|"\r\n") >
|   < EOF_COMMENT: "//" (~["\n","\r"])* >
}

TOKEN :
{	< MAIS: "+" >
|	< MENOS: "-" >
|	< ASTERISCO: "*" >
| 	< AND: "&&" >
| 	< MENOR: "<" >
| 	< NAO: "!" >
| 	< IGUAL: "=" >
| 	< ABRE_PARENTESES: "(" >
|	< FECHA_PARENTESES: ")" >
|	< ABRE_COLCHETE: "[" >
|	< FECHA_COLCHETE: "]" >
| 	< ABRE_CHAVE: "{" >
| 	< FECHA_CHAVE: "}" >
| 	< PONTOVIRGULA: ";" >
| 	< PONTO: "." >
| 	< VIRGULA: "," >
| 	< CLASS: "class" >
| 	< STRING: "String" >
| 	< INT: "int" >
| 	< BOOLEAN: "boolean" >
| 	< THIS: "this" >
| 	< IF: "if" >
| 	< ELSE: "else" >
| 	< WHILE: "while" >
| 	< TRUE: "true" >
| 	< FALSE: "false" >
| 	< STATIC: "static" >
| 	< EXTENDS: "extends" >
| 	< RETURN: "return" >
| 	< PUBLIC: "public" >
| 	< VOID: "void" >
| 	< MAIN: "main" >
| 	< PRINT: "System.out.println" >
| 	< LENGTH: "length" >
| 	< NEW: "new" >
|   < INT_LITERAL: ( <NUMERO> )+ >
|	< IDENTIFIER: <LETRAS> ( <LETRAS> | <NUMERO> )*>
| 	< #LETRAS: ["a" - "z", "A"-"Z", "_"] >
|   < #NUMERO: ["0" - "9"] >
}


/** Producao inicial. */
void Start() : {}
{
  Goal()
  { return jjtThis; }
}

void Goal() : {}
{
  MainClass()(ClassDeclaration())*// ";"//<EOF>
}

void MainClass() : {

	//TokenAsignaciones.SetTables();
	
 }
{
  <CLASS> <IDENTIFIER> <ABRE_CHAVE> <PUBLIC> <STATIC> <VOID> <MAIN> <ABRE_PARENTESES> <STRING> <ABRE_COLCHETE> <FECHA_COLCHETE> <IDENTIFIER> <FECHA_PARENTESES> <ABRE_CHAVE> Statement() <FECHA_CHAVE> <FECHA_CHAVE> 
}

void ClassDeclaration() : {}
{
  <CLASS> <IDENTIFIER> (<EXTENDS> <IDENTIFIER>)? <ABRE_CHAVE> (VarDeclaration())* (MethodDeclaration())* <FECHA_CHAVE>
}

void VarDeclaration() : {}
{
  Type() <IDENTIFIER> <PONTOVIRGULA>
}

void MethodDeclaration() : {}
{
  <PUBLIC> Type() <IDENTIFIER> <ABRE_PARENTESES> ( Type() <IDENTIFIER> ( <VIRGULA> Type() <IDENTIFIER>)*)? <FECHA_PARENTESES> <ABRE_CHAVE> (VarDeclaration())* (Statement())* <RETURN> Expression() <PONTOVIRGULA>
}

void Type() : {}
{
  <INT> (<ABRE_COLCHETE> <FECHA_COLCHETE> |{}) 
  | <BOOLEAN>
  | <IDENTIFIER> 
}

void Statement() : {}
{
  <ABRE_CHAVE> (Statement())* <FECHA_CHAVE>
  | <IF> <ABRE_PARENTESES> Expression() <FECHA_PARENTESES> Statement() <ELSE> Statement()
  | <WHILE> <ABRE_PARENTESES> Expression() <FECHA_PARENTESES> Statement()
  | <PRINT> <ABRE_PARENTESES> Expression() <FECHA_PARENTESES> <PONTOVIRGULA>
  | <IDENTIFIER> (<IGUAL> Expression() <PONTOVIRGULA>
  |  <ABRE_COLCHETE> Expression() <FECHA_COLCHETE> <IGUAL> Expression() <PONTOVIRGULA>)  // GAMBIARRA
}

void Elinha() : {}
{
   (<AND> | <MENOR> | <MAIS> | <MENOS> | <ASTERISCO>) Expression()
   | <ABRE_COLCHETE> Expression() <FECHA_COLCHETE>
   | <PONTO> (<LENGTH>
   |  <IDENTIFIER> <ABRE_PARENTESES> ( Expression() ( <VIRGULA> Expression())*)? <FECHA_PARENTESES> )
   | {}
}

// METODO COM GAMBIARRA
void Expression() : {}
{
   <INT_LITERAL> Elinha()
  | <TRUE> Elinha()
  | <FALSE> Elinha()
  | <IDENTIFIER> Elinha()
  | <THIS> Elinha()
  | <NEW>
	  (
		<INT> <ABRE_COLCHETE> Expression() <FECHA_COLCHETE> Elinha()  // GAMBIARRA
	  	|<IDENTIFIER> <ABRE_PARENTESES> <FECHA_PARENTESES> Elinha()
	  )
  | <NAO> Expression() Elinha()
  | <ABRE_PARENTESES> Expression() <FECHA_PARENTESES> Elinha()
}
